Dark mode, fixes

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -8,7 +8,13 @@
     "settingsDialog": {
         "title": "Settings",
         "language": "Language",
+        "theme": "Color theme",
         "close": "Close"
+    },
+    "theme": {
+      "auto": "Device theme",
+      "light": "Light theme",
+      "dark": "Dark theme"
     },
     "lang": {
         "fr": "Français",
