--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -8,7 +8,13 @@
     "settingsDialog": {
         "title": "Paramètres",
         "language": "Langue",
+        "theme": "Thème de couleurs",
         "close": "Fermer"
+    },
+    "theme": {
+      "auto": "Thème de l'appareil",
+      "light": "Thème clair",
+      "dark": "Thème sombre"
     },
     "lang": {
         "fr": "Français",
